--- a/light.html
+++ b/light.html
@@ -37,7 +37,7 @@
             var light = document.getElementById('light');
             light.classList.toggle('off');
             light.classList.toggle('on');
-            light.style.backgroundColor = light.classList.contains('on') ? 'bisque' : 'black';
+            light.style.backgroundColor = light.classList.contains('on') ? 'rgb(131,58,180)' : 'black';
         }
     </script>
 </body>
