--- a/personal expences js.html
+++ b/personal expences js.html
@@ -18,6 +18,7 @@
         }
         .expense-item {
             margin-bottom: 10px;
+            color: blueviolet;
         }
     </style>
 </head>
@@ -29,7 +30,7 @@
         <button onclick="addExpense()">Add Expense</button>
     </div>
     <ul id="expense-list" class="expense-list"></ul>
-    <h2>Total: $<span id="total-amount">0</span></h2>
+    <h2>Total: Tsh<span id="total-amount">0</span></h2>
 
     <script>
         let totalAmount = 0;
@@ -46,7 +47,7 @@
             if (name && !isNaN(amount) && amount > 0) {
                 const listItem = document.createElement('li');
                 listItem.className = 'expense-item';
-                listItem.textContent = `${name}: $${amount.toFixed(2)}`;
+                listItem.textContent = `${name}: ${amount.toFixed(2)}`;
                 expenseList.appendChild(listItem);
 
                 totalAmount += amount;
