--- a/full landing.html
+++ b/full landing.html
@@ -13,7 +13,7 @@
             font-family: Arial, sans-serif;
         }
         .background {
-            background-image: url('https://example.com/full-moon.jpg'); /* Replace with your full moon image URL */
+            background-image: url('https://img.freepik.com/free-photo/abstract-landscape-with-photorealistic-view-moon_23-2151158629.jpg'); /* Replace with your new full moon image URL */
             background-size: cover;
             background-position: center;
             width: 100%;
