--- a/Jokes.html
+++ b/Jokes.html
@@ -6,6 +6,7 @@
     <title>Random Jokes</title>
     <style>
         body {
+            background-color:goldenrod;
             font-family: Arial, sans-serif;
             text-align: center;
             margin-top: 50px;
@@ -21,6 +22,8 @@
             padding: 10px 20px;
             font-size: 2em;
             border-radius: 20px;
+            cursor: pointer;
+            shadow: 2px 2px 2px black;
         }
         h1{
             color:teal;
