--- a/Player.html
+++ b/Player.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+            background-color:darkgrey;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -41,9 +41,9 @@
 </head>
 <body>
     <div class="player">
-        <h2>Music Player</h2>
+        <h2>Player</h2>
         <audio id="audio" controls>
-            <source src="your-music-file.mp3" type="audio/mp3">
+            <source src="https://cdn.pixabay.com/download/audio/2024/12/09/audio_5c5be993bd.mp3?filename=vlog-music-beat-trailer-showreel-promo-background-intro-theme-274290.mp3" type="audio/mp3">
             Your browser does not support the audio element.
         </audio>
         <br>
