--- a/Player.html
+++ b/Player.html
@@ -24,6 +24,9 @@
         .player audio {
             width: 100%;
             margin-top: 10px;
+            border-radius: 5px 5px 0 0;
+            color: bisque;
+            background-color: darkolivegreen;
         }
         .player button {
             background: #007bff;
@@ -32,10 +35,12 @@
             padding: 10px 20px;
             border-radius: 5px;
             cursor: pointer;
-            margin-top: 10px;
+            margin-top: 16px;
+            margin: 5px;
         }
         .player button:hover {
-            background: #0056b3;
+            background:yellow;
+            color: black;
         }
     </style>
 </head>
