--- a/radom-color.html
+++ b/radom-color.html
@@ -22,6 +22,7 @@
             background-color: #007bff;
             color: white;
             text-emphasis: bold;
+            border-radius: 10px 10px 10px 0;
         }
     </style>
 </head>
