--- a/Radio.html
+++ b/Radio.html
@@ -13,8 +13,8 @@
         }
         .player {
             margin: 20px auto;
-            width: 80%;
-            max-width: 600px;
+            width: 90%;
+            max-width: 700px;
             background-color: #fff;
             padding: 20px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -29,7 +29,7 @@
     <h1>TV Stations Player</h1>
     <div class="player">
         <video controls>
-            <source src="path_to_your_tv_station_stream.mp4" type="video/mp4">
+            <source src="https://app.plex.tv/desktop/#!/live-tv" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
