--- a/record.html
+++ b/record.html
@@ -12,6 +12,7 @@
         table {
             width: 100%;
             border-collapse: collapse;
+            color:darkorange;
         }
         table, th, td {
             border: 1px solid black;
@@ -19,6 +20,7 @@
         th, td {
             padding: 10px;
             text-align: left;
+            color: chartreuse;
         }
         th {
             background-color: #f2f2f2;
