--- a/Messenger.html
+++ b/Messenger.html
@@ -79,6 +79,13 @@
                 messageInput.focus();
             }
         }
+        document.getElementById('message-input').focus();
+        document.getElementById('message-input').addEventListener('keypress', function(event) {
+            if (event.key === 'Enter') {
+                sendMessage();
+            }
+        });
+        
     </script>
 </body>
 </html>
