--- a/movie.html
+++ b/movie.html
@@ -14,6 +14,7 @@
             background-color: #f0f0f0;
             margin: 0;
             padding: 0;
+            flex-wrap: wrap;
         }
         header {
             background-color: #333;
@@ -47,7 +48,7 @@
             background-color: #f2f2f2;
             padding: 10px;
             margin: 10px;
-            float: left;
+            float: right;
         }
         .trailer {
             background-color: #f2f2f2;
