--- a/clock.html
+++ b/clock.html
@@ -11,7 +11,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color:coral;
+            background-color:darkgray;
         }
         .clock {
             text-align: center;
@@ -29,6 +29,7 @@
         h1 {
             color: #333;
             text-decoration: underline;
+            font-family: Arial, Helvetica, sans-serif;
 
         }
         #Dar{
