--- a/windows.html
+++ b/windows.html
@@ -93,7 +93,7 @@
 </head>
 <body>
     <div class="login-box">
-        <h2>User</h2>
+        <h2>Login</h2>
         <input type="text" placeholder="Username" id="username">
         <input type="password" placeholder="Password" id="password">
         <input type="button" value="Login" onclick="login()">
