update staff images and improve layout in Restaurat.html

--- a/Restaurat.html
+++ b/Restaurat.html
@@ -91,7 +91,7 @@
             margin: 20px auto;
             text-align: center;
             border: 2px solid #3498db;
-            padding: 14px 10px;
+            padding: 13px 10px;
             width: 200px;
             outline: none;
             color:#444;
@@ -115,10 +115,12 @@
             border-radius: 24px;
             transition: 0.25s;
             cursor: pointer;
-            font-size:
+            font-size: 16px;
         }
         input[type="submit"]:hover {
             background: #2ecc71;
+            color: white;
+            text-transform: uppercase;
         }
         label {
             color:cadetblues
@@ -177,7 +179,7 @@
             display: block;
         }
         ::placeholder {
-            color: black;
+            color:grey;
             font-family: Georgia, 'Times New Roman', Times, serif;
             font-size: 1em;
         }
@@ -293,44 +295,74 @@
         <h2>Our Staff</h2>
         <div class="staff">
             <div class="staff-member">
-                <img src="staff1.jpg" alt="Staff Member 1">
+                <img src="https://cdn.pixabay.com/photo/2022/02/09/13/35/man-7003421_1280.jpg" alt="Staff Member 1">
                 <h3>John Doe</h3>
                 <p>Email: john@example.com</p>
             </div>
             <div class="staff-member">
-                <img src="staff2.jpg" alt="Staff Member 2">
+                <img src="https://cdn.pixabay.com/photo/2021/04/05/12/39/man-6153298_1280.jpg" alt="Staff Member 2">
                 <h3>Jane Smith</h3>
                 <p>Email: jane@example.com</p>
             </div>
             <div class="staff-member">
-                <img src="staff2.jpg" alt="Staff Member 2">
+                <img src="https://cdn.pixabay.com/photo/2021/04/05/12/38/man-6153295_1280.jpg" alt="Staff Member 3">
                 <h3>Jane Smith</h3>
                 <p>Email: jane@example.com</p>
             </div>
             <div class="staff-member">
-                <img src="staff2.jpg" alt="Staff Member 2">
+                <img src="https://img.freepik.com/free-photo/portrait-cheerful-caucasian-man_53876-13440.jpg?t=st=1739024164~exp=1739027764~hmac=af1cfbe8aefef87edb2d7595065e63ecd1ac0321caa7072b82f3fec5fd6d0843&w=1800" alt="Staff Member 4">
                 <h3>Jane Smith</h3>
                 <p>Email: jane@example.com</p>
             </div>
             <div class="staff-member">
-                <img src="staff2.jpg" alt="Staff Member 2">
+                <img src="https://img.freepik.com/free-photo/portrait-caucasian-woman-smiling_53876-24998.jpg?t=st=1739024199~exp=1739027799~hmac=3189d7a188248e9ef77e9d87f810f7313a48ccc542c1745eede04b2026e7edbd&w=1800" alt="Staff Member 5">
                 <h3>Jane Smith</h3>
                 <p>Email: jane@example.com</p>
             </div>
             <div class="staff-member">
-                <img src="staff2.jpg" alt="Staff Member 2">
+                <img src="https://img.freepik.com/free-photo/elegant-girl-spring-park_1157-21819.jpg?t=st=1739024256~exp=1739027856~hmac=a5a4f26218e54f00fad83852ef60a6844f969ed0bf4afa5e9903d060a09b9f10&w=1800" alt="Staff Member 6">
                 <h3>Jane Smith</h3>
                 <p>Email: jane@example.com</p>
             </div>
             <div class="staff-member">
-                <img src="staff2.jpg" alt="Staff Member 2">
+                <img src="https://img.freepik.com/free-photo/stylish-woman-spending-time-spring-park_1157-36053.jpg?t=st=1739024289~exp=1739027889~hmac=67a96de337d12582bff97258d5755e6710314ec093979129c6a22a444927a887&w=1800" alt="Staff Member 7">
                 <h3>Jane Smith</h3>
                 <p>Email: jane@example.com</p>
             </div>
             <div class="staff-member">
-                <img src="staff2.jpg" alt="Staff Member 2">
+                <img src="https://img.freepik.com/free-photo/stylish-woman-spending-time-spring-park_1157-36052.jpg?t=st=1739024355~exp=1739027955~hmac=b0d63501348c3dc07888f790534972157aaf9e6656aee793793f47699545b355&w=1800" alt="Staff Member 8">
                 <h3>Jane Smith</h3>
                 <p>Email: jane@example.com</p>
+            </div>
+            <div class="staff-member">
+                <img src="https://img.freepik.com/free-photo/stylish-woman-spending-time-spring-park_1157-36052.jpg?t=st=1739024355~exp=1739027955~hmac=b0d63501348c3dc07888f790534972157aaf9e6656aee793793f47699545b355&w=1800" alt="Staff Member 9">
+                <h3>Jane Smith</h3>
+                <p>Email: jane@example.com</p>
+            </div>
+            <div class="staff-member">
+                <img src="https://img.freepik.com/free-photo/stylish-woman-spending-time-spring-park_1157-36052.jpg?t=st=1739024355~exp=1739027955~hmac=b0d63501348c3dc07888f790534972157aaf9e6656aee793793f47699545b355&w=1800" alt="Staff Member 10">
+                <h3>Jane Smith</h3>
+                <p>Email: jane@example.com</p>
+            </div>
+            <div class="staff-member">
+                <img src="https://img.freepik.com/free-photo/stylish-woman-spending-time-spring-park_1157-36052.jpg?t=st=1739024355~exp=1739027955~hmac=b0d63501348c3dc07888f790534972157aaf9e6656aee793793f47699545b355&w=1800" alt="Staff Member 11">
+                <h3>Jane Smith</h3>
+                <p>Email: jane@example.com</p>
+            </div>
+            <div class="staff-member">
+                <img src="https://img.freepik.com/free-photo/stylish-woman-spending-time-spring-park_1157-36052.jpg?t=st=1739024355~exp=1739027955~hmac=b0d63501348c3dc07888f790534972157aaf9e6656aee793793f47699545b355&w=1800" alt="Staff Member 12">
+                <h3>Jane Smith</h3>
+                <p>Email: jane@example.com</p>
+            </div>
+            <div class="staff-member">
+                <img src="https://img.freepik.com/free-photo/stylish-woman-spending-time-spring-park_1157-36052.jpg?t=st=1739024355~exp=1739027955~hmac=b0d63501348c3dc07888f790534972157aaf9e6656aee793793f47699545b355&w=1800" alt="Staff Member 13">
+                <h3>Vio Dadi</h3>
+                <p>Email: vio@example.com</p>
+            </div>
+            <div class="staff-member">
+                <img src="https://img.freepik.com/free-photo/stylish-woman-spending-time-spring-park_1157-36052.jpg?t=st=1739024355~exp=1739027955~hmac=b0d63501348c3dc07888f790534972157aaf9e6656aee793793f47699545b355&w=1800" alt="Staff Member 14">
+                <h3>Eva Robert</h3>
+                <p>Email: eva@example.com</p>
             </div>
             <!-- Add more staff members as needed -->
         </div>
