--- a/Restaurat.html
+++ b/Restaurat.html
@@ -301,12 +301,12 @@
             </div>
             <div class="staff-member">
                 <img src="https://cdn.pixabay.com/photo/2021/04/05/12/39/man-6153298_1280.jpg" alt="Staff Member 2">
-                <h3>Jane Smith</h3>
+                <h3>Jack Smith</h3>
                 <p>Email: jane@example.com</p>
             </div>
             <div class="staff-member">
                 <img src="https://cdn.pixabay.com/photo/2021/04/05/12/38/man-6153295_1280.jpg" alt="Staff Member 3">
-                <h3>Jane Smith</h3>
+                <h3>Jane Doe</h3>
                 <p>Email: jane@example.com</p>
             </div>
             <div class="staff-member">
@@ -368,7 +368,7 @@
         </div>
     </div>
     <footer>
-        <p>&copy; 2023 Our Restaurant</p>
+        <p>&copy; 2025 Charlovee Restaurant</p>
     </footer>
 </body>
 </html></div>
