--- a/Scratch.html
+++ b/Scratch.html
@@ -60,16 +60,16 @@
     </div>
     <div class="cont">
         <div class="one">
-            Cnn
+            Cnn News
         </div>
         <div class="two">
-            Bbc
+            Bbc World
     </div>
     <div class="three">
-        Aljazeera
+        Aljazeera News
     </div>
     <div class="four">
-        Fox
+        Fox News
     </div>
 </body>
 </html>
