--- a/windows.html
+++ b/windows.html
@@ -15,9 +15,8 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color:  #151b13;
-
-        }
+            background-color: #213555;   
+               }
         .login-box {
             width: 300px;
             padding: 40px;
